--- a/speed.html
+++ b/speed.html
@@ -52,7 +52,7 @@
 				    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.
 				</p>
 
-				<p id="1@#%^-bottom"><a href="#top">Back to the top</a></p>
+				<p id="1@#%^-bottom"><a href="#">Back to the top</a></p>
 
 				<p>.<br>.<br>.<br>.<br>.</p>
 			</section>
